--- a/src/main/resources/templates/nampage.html
+++ b/src/main/resources/templates/nampage.html
@@ -303,6 +303,8 @@
     <section>
         <div class="profile">
 
+            <h1>남에 페이지</h1>
+
             <div class="profileimg" style="display:flex;justify-content:center; align-items : center;">
                 <img th:src="${#authentication.getPrincipal().getUser().getProfile()}" style="width:150px;height:150px;border-radius:50%;" />
             </div>
