닉네임조회할때 자기빼고

--- a/src/main/resources/templates/nampage.html
+++ b/src/main/resources/templates/nampage.html
@@ -330,7 +330,7 @@
 
         <!-- --------------------------------------------------------------------------------------------------------------------------- -->
 
-        <div class="s_board" style="width : 1000px; display : flex; justify-content: left; flex-wrap : wrap; margin-left : 0px;">
+        <div class="s_board" style="width : 1000px; display : flex; justify-content: left; flex-wrap : wrap; margin-left : 0px;margin-top : 50px;">
 
             <th:block th:each="board : ${namBoards}">
                 <div class="board-item">
