--- a/src/main/resources/templates/read.html
+++ b/src/main/resources/templates/read.html
@@ -203,8 +203,10 @@
 
           <div class="idbox" style="width : 585px;">
             <div>
-              <img th:src="${profile}" style="width:30px;height:30px;border-radius:50%;" />
-              <div id = board_id th:text="${board.nickname}">id</div>|
+              <a th:href="'/whopage/' + ${board.number}" style="display:flex; align-items: center;font-size: 0.8rem;margin-right : 10px;justify-content: center; text-decoration: none; color : black;">
+                <img th:src="${profile}" style="width:30px;height:30px;border-radius:50%;margin-right : 10px;" />
+                <div id = board_id th:text="${board.nickname}">id</div>
+              </a>|
               <div class="date" th:text="${board.date}">date</div>
             </div>
             <div class="hits-box">조회
