카카오로그인된다

--- a/src/main/resources/templates/search-nickname.html
+++ b/src/main/resources/templates/search-nickname.html
@@ -247,7 +247,7 @@
         </div>
         <div class="name">
           <div class = "nickname" th:text="${user.nickname}"> nickname</div>
-          <div class="email" th:test="${user.email}">email</div>
+          <div class="email" th:text="${user.email}">email</div>
         </div>
         <div class="follow">
           <button class="btn btn-secondary">팔로우</button>
