--- a/src/main/resources/templates/search-contents.html
+++ b/src/main/resources/templates/search-contents.html
@@ -205,8 +205,10 @@
 
                     <div class="idbox">
                         <div>
-                            <img th:src="${data.profile}" style="width:30px;height:30px;border-radius:50%;" />
-                            <div id = board_id th:text="${data.board.nickname}">id</div>|
+                            <a th:href="'/whopage/' + ${data.board.number}" style="display:flex; align-items: center;font-size: 0.8rem;margin-right : 10px;justify-content: center; text-decoration: none; color : black;">
+                                <img th:src="${data.profile}" style="width:30px;height:30px;border-radius:50%;margin-right : 10px;" />
+                                <div id = board_id th:text="${data.board.nickname}">id</div>
+                            </a>|
                             <div class="date" th:text="${data.board.date}">date</div>
                         </div>
                         <div class="hits-box">조회
