--- a/src/main/resources/templates/nampage.html
+++ b/src/main/resources/templates/nampage.html
@@ -133,7 +133,7 @@
         <div class="top-menu">
 
             <div class="logo">
-                <a href="/list"> <img src="images/logo.png" max-width="100%" height="15"/> </a>
+                <a href="/list"> <img src="/images/logo.png" max-width="100%" height="15"/> </a>
             </div>
 
             <div class="middle-menu">
